--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 # Datasource local storage ignored files
 /dataSources/
 /dataSources.local.xml
+/gen
+/docs
 
 # Binaries for programs and plugins
 *.exe
@@ -20,6 +22,6 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
 .idea
+.gen
+.docs
